correccion en la creación de entidades